# proteo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
contrib/: steam-bigpicture.sh
debian/: changelog  control  copyright  proteo.install  proteo.postinst.debhelper  proteo.postrm.debhelper  proteo.prerm.debhelper
packaging/: config.toml
packaging/modprobe.d/: proteo.conf
packaging/modules-load.d/: proteo.conf
packaging/systemd/: proteo-guard.service
proteo/: cli.py
proteo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
proteo/adapters/: evdi.py  proc.py
proteo/core/: config.py  edid.py  model.py
spike/: evdi_client.c  make_edid.py
tests/: test_config.py  test_edid.py  test_guard.py  test_layout.py  test_model.py  test_state.py
